main: added clickable inventories for team fight post-match